--- a/site/portal.html
+++ b/site/portal.html
@@ -9,19 +9,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="login">
-        <img src="imagens/Aqua Logo.png" alt="Aqua">
+    <main class="login">
+        <img class="logo" src="imagens/Aqua Logo.png" alt="Aqua">
         <section class="serv">
-            <input type="email" name="Login" id="email">
-            <input type="password" name="Senha" id="pass">
-            <input type="button" value="Login">
+            <input type="email" name="Login" placeholder="Login" class="campos" id="email">
+            
+            <input type="password" name="Senha" placeholder="Senha" class="campos" id="pass">
+
+            <input type="button" class="bt" value="Login">
         </section>
     
-        <p>Divisor</p>
+        <hr class="divisor">
 
         <section class="google">
             <input type="button" value="Google">
         </section>
-    </section>
+    </main>
 </body>
 </html>
