ajustes verticais e att

--- a/site/portal.html
+++ b/site/portal.html
@@ -12,7 +12,7 @@
     <main class="login">
         <img class="logo" src="imagens/Aqua Logo.png" alt="Aqua">
         <section class="serv">
-            <input type="email" name="Login" placeholder="Login" class="campos" id="email">
+            <input type="email" name="Login" placeholder="Usuário" class="campos" id="email">
             
             <input type="password" name="Senha" placeholder="Senha" class="campos" id="pass">
 
