--- a/site/portal.html
+++ b/site/portal.html
@@ -7,6 +7,7 @@
     <title>Aqua</title>
     <link rel="shortcut icon" href="imagens/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 <body>
     <main class="login">
@@ -21,9 +22,8 @@
     
         <hr class="divisor">
 
-        <section class="google">
-            <input type="button" value="Google">
-        </section>
+        <div class="g-signin2" data-onsuccess="onSignIn"></div>
     </main>
+    <script src="lggoogle.js"></script>
 </body>
 </html>
