reorganização de pastas

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aqua</title>
     <link rel="shortcut icon" href="imagens/favicon-32x32.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 <body>
@@ -24,6 +24,6 @@
 
         <div class="g-signin2" data-onsuccess="onSignIn"></div>
     </main>
-    <script src="lggoogle.js"></script>
+    <script src="js/lggoogle.js"></script>
 </body>
 </html>
