--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aqua</title>
-    <link rel="shortcut icon" href="imagens/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/Logo 120x120.png" type="image/x-icon">
     <link rel="stylesheet" href="style/style.css">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
