--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
             
             <input type="password" name="Senha" placeholder="Senha" class="campos" id="pass">
 
-            <input type="button" class="bt" value="Login">
+            <input type="submit" class="bt" value="Entrar">
         </section>
     
         <hr class="divisor">
 
-        <div class="g-signin2" data-onsuccess="onSignIn"></div>
+        <button type="submit" class="campos">Google</button>
     </main>
-    <script src="js/lggoogle.js"></script>
 </body>
 </html>
