--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
 <body>
     <main class="login">
         <img class="logo" src="imagens/Aqua Logo.png" alt="Aqua">
-        <section class="serv">
+        <form class="serv">
             <input type="email" name="Login" placeholder="Usuário" class="campos" id="email">
             
             <input type="password" name="Senha" placeholder="Senha" class="campos" id="pass">
 
             <input type="submit" class="bt" value="Entrar">
-        </section>
+        </form>
     
         <hr class="divisor">
 
         <button type="submit" class="campos">Google</button>
     </main>
+    <script src="login.js"></script>
 </body>
 </html>
