--- a/index.html
+++ b/index.html
@@ -4,26 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aqua</title>
+    <title>Aqua - O melhor jeito de beber água</title>
     <link rel="shortcut icon" href="imagens/Logo 120x120.png" type="image/x-icon">
-    <link rel="stylesheet" href="style/style.css">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 <body>
-    <main class="login">
-        <img class="logo" src="imagens/Aqua Logo.png" alt="Aqua">
-        <form class="serv">
-            <input type="email" name="Login" placeholder="Usuário" class="campos" id="email">
-            
-            <input type="password" name="Senha" placeholder="Senha" class="campos" id="pass">
+    <header>
+        <img src="imagens/Aqua Logo.png" alt="">
+    </header>
+    <main>
+        <section id="inicio">
+            <h1>BEBA + ÁGUA</h1>
+            <P>Veja algumas dicas e nosso guia para alcançar a hidratação diária ideal</P>
+            <button>Dicas</button>
 
-            <input type="submit" class="bt" value="Entrar">
-        </form>
-    
-        <hr class="divisor">
+            <img src="" alt="">
+        </section>
 
-        <button type="submit" class="campos">Google</button>
+        <section id="eu">
+            <img src="" alt="">
+
+            <h3>Oie</h3>
+            <p>Sou o Matt e vou te mostrar com tomar 2x mais água e ficar super hidratado</p>
+            <button>Alcançando o mínimo</button>
+        </section>
+
+        <section id="dicas">
+            <h2>Algumas Dicas</h2>
+            <p>Veja alguns pontos para beber mais água diariamente</p>
+
+            <img src="" alt="">
+
+
+            <img src="" alt="">
+            <h3 class="sub">SEM ÁGUA</h3>
+            <h3>GELADA</h3>
+            <p>Você provavelmente ama tomar uma água gelada! Porém a saciedade dela não te hidratará!</p>
+
+            <img src="" alt="">
+            <h3 class="sub">ATIVE OS</h3>
+            <h3>LEMBRETES</h3>
+            <p>Escolha um app, alarmes ou um timer, não importa, desde que sejas lembrado de hidratar-se!</p>
+
+            <img src="" alt="">
+            <h3 class="sub">Glup, Glup</h3>
+            <h3>FLUXO</h3>
+            <p>Cada garrafinha tem um "glup" diferente, e algumas te darão a falsa impressão de hidratação!</p>
+        </section>
     </main>
-    <script src="login.js"></script>
+    <footer>
+
+    </footer>
 </body>
 </html>
