Primeiros ajustes CSS

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aqua - O melhor jeito de beber água</title>
     <link rel="shortcut icon" href="imagens/Logo 120x120.png" type="image/x-icon">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header>
@@ -21,9 +22,7 @@
         </section>
 
         <section id="eu">
-            <section>
-                <img class="img" src="" alt="">
-            </section>
+            <img class="img" src="" alt="">
 
             <h3>Oie</h3>
             <p>Sou o Matt e vou te mostrar com tomar 2x mais água e ficar super hidratado</p>
@@ -34,11 +33,8 @@
             <h2>Algumas Dicas</h2>
             <p>Veja alguns pontos para beber mais água diariamente</p>
 
-            <section>
-                <img class="img" src="" alt="">
-            </section>
-
-
+            <img class="img" src="" alt="">
+            
             <img class="img" src="" alt="">
             <h3 class="sub">SEM ÁGUA</h3>
             <h3>GELADA</h3>
@@ -65,23 +61,19 @@
                 <input type="radio" name="atividades" id="exer">
                 <label for="atividades">Sedentário</label>
 
+
                 <p class="ttc">Clima Habitual</p>
                 <input type="radio" name="clima" id="exer" checked><label for="clima">+30°<small>c</small></label>
                 <input type="radio" name="clima" id="exer">
                 <label for="clima">-30°<small>c</small></label>
 
-                <section class="peso">
-                    <input type="range" name="peso" id="pesorange">
-                    <input type="number" name="peso" id="pesoescrito">
-                    <!-- Inserir JS para acrescentar a string "kg" -->
-                    <p class="ttc">Peso Atual</p>
-                </section>
+                <input type="range" name="peso" id="pesorange">
+                <input type="number" name="peso" id="pesoescrito">
+                <!-- Inserir JS para acrescentar a string "kg" -->
             </form>
             
-            <section>
-                <h4>Sua meta é de <p id="litros">X</p> litros d'água por dia</h4>
-                <img class="img" src="" alt="">
-            </section>
+            <h4 id="litros">Sua meta é de X litros d'água por dia</h4>
+            <img class="img" src="" alt="">
         </section>
 
         <section id="guia">
