--- a/portal.html
+++ b/portal.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aqua</title>
     <link rel="shortcut icon" href="imagens/Logo 120x120.png" type="image/x-icon">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/styleportal.css">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 <body>
