--- a/index.html
+++ b/index.html
@@ -5,13 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aqua | Be Better</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="shortcut icon" href="imagens/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
         <section id="header">
-            
+            <span class="material-symbols-rounded">
+                menu
+            </span>
+            <picture>
+                <source media="(max-width: 600px)" srcset="imagem-600px.jpg">
+                <source media="(max-width: 900px)" srcset="imagem-900px.jpg">
+                <source media="(min-width: 901px)" srcset="imagem-1200px.jpg">
+                <img src="imagem-1200px.jpg" alt="Imagem">
+              </picture>
+              
         </section>
         <section id="main">
 
