--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 menu
             </span>
             <picture>
-                <source media="(max-width: 600px)" srcset="imagem-600px.jpg">
+                <source media="(max-width: 600px)" srcset="imagens/">
                 <source media="(max-width: 900px)" srcset="imagem-900px.jpg">
                 <source media="(min-width: 901px)" srcset="imagem-1200px.jpg">
                 <img src="imagem-1200px.jpg" alt="Imagem">
