--- a/index.html
+++ b/index.html
@@ -16,15 +16,28 @@
                 menu
             </span>
             <picture>
-                <source media="(max-width: 600px)" srcset="imagens/">
-                <source media="(max-width: 900px)" srcset="imagem-900px.jpg">
-                <source media="(min-width: 901px)" srcset="imagem-1200px.jpg">
-                <img src="imagem-1200px.jpg" alt="Imagem">
+                <source media="(max-width: 600px)" srcset="imagens/Aqua Logo 120px.png">
+                <source media="(max-width: 900px)" srcset="imagens/Aqua Logo 200px.png">
+                <source media="(min-width: 901px)" srcset="imagens/Aqua Logo Grande.png">
+                <img src="imagens/Aqua Logo 200px.png" alt="Logo Aqua">
               </picture>
-              
+            <div id="hidratados">
+                100<span class="material-symbols-rounded">
+                groups</span>
+            </div>
         </section>
         <section id="main">
-
+            <h1>BEBA + ÁGUA</h1>
+            <div id="slider">
+                <p class="slide">Mantenha-se hidratad: Dicas simples e eficazes para beber mais água todos os dias</p>
+                <p class="slide">Descubra a quantidade ideal de água para o seu corpo</p>
+                <p class="slide">Receba um guia prático de como atingir sua meta diária de hidratação</p>
+            </div>
+            <div class="pager">
+                <span class="pager-item"></span>
+                <span class="pager-item"></span>
+                <span class="pager-item"></span>
+              </div>
         </section>
     </header>
     <main>
