--- a/index.html
+++ b/index.html
@@ -26,18 +26,32 @@
                 groups</span>
             </div>
         </section>
-        <section id="main">
-            <h1>BEBA + ÁGUA</h1>
-            <div id="slider">
-                <p class="slide">Mantenha-se hidratad: Dicas simples e eficazes para beber mais água todos os dias</p>
-                <p class="slide">Descubra a quantidade ideal de água para o seu corpo</p>
-                <p class="slide">Receba um guia prático de como atingir sua meta diária de hidratação</p>
+        <section id="home">
+            <div class="divisor">
+                <h1>BEBA + ÁGUA</h1>
+                <div id="slider">
+                    <p class="slide">Mantenha-se hidratad: Dicas simples e eficazes para beber mais água todos os dias</p>
+                    <p class="slide">Descubra a quantidade ideal de água para o seu corpo</p>
+                    <p class="slide">Receba um guia prático de como atingir sua meta diária de hidratação</p>
+                </div>
+                <div class="pager">
+                    <span class="pager-item"></span>
+                    <span class="pager-item"></span>
+                    <span class="pager-item"></span>
+                </div>
+                <button class="home">Diiicas</button>
+                <button class="home">Liiitros</button>
+                <button class="home">Reeeceba</button>
             </div>
-            <div class="pager">
-                <span class="pager-item"></span>
-                <span class="pager-item"></span>
-                <span class="pager-item"></span>
-              </div>
+                <picture>
+                    <source media="(max-width: 600px)" srcset="imagens/matt/">
+                    <source media="(max-width: 900px)" srcset="imagens/Aqua Logo 200px.png">
+                    <source media="(min-width: 901px)" srcset="imagens/Aqua Logo Grande.png">
+                    <img src="imagens/Aqua Logo 200px.png" alt="Logo Aqua">
+              </picture>
+            <div class="imagem">
+                
+            </div>
         </section>
     </header>
     <main>
