--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
                 <button class="home">Reeeceba</button>
             </div>
                 <picture>
-                    <source media="(max-width: 600px)" srcset="imagens/matt/">
-                    <source media="(max-width: 900px)" srcset="imagens/Aqua Logo 200px.png">
-                    <source media="(min-width: 901px)" srcset="imagens/Aqua Logo Grande.png">
-                    <img src="imagens/Aqua Logo 200px.png" alt="Logo Aqua">
+                    <source media="(min-width: 100px)" srcset="imagens/matt/mattLight200px.png">
+                    <source media="(max-width: 900px)" srcset="imagens/matt/mattLight300px.png">
+                    <source media="(min-width: 901px)" srcset="imagens/matt/mattLight400px.png">
               </picture>
             <div class="imagem">
                 
