--- a/index.html
+++ b/index.html
@@ -12,18 +12,10 @@
 <body>
     <header>
         <section id="header">
-            <span class="material-symbols-rounded">
-                menu
-            </span>
-            <picture>
-                <source media="(max-width: 600px)" srcset="imagens/Aqua Logo 120px.png">
-                <source media="(max-width: 900px)" srcset="imagens/Aqua Logo 200px.png">
-                <source media="(min-width: 901px)" srcset="imagens/Aqua Logo Grande.png">
-                <img src="imagens/Aqua Logo 200px.png" alt="Logo Aqua">
-              </picture>
+            <img id="menu" src="imagens/menu.png" alt="Menu">
+            <img src="imagens/Aqua Logo 120px.png" alt="Aqua Logo">
             <div id="hidratados">
-                100<span class="material-symbols-rounded">
-                groups</span>
+                <p class="cont">1.1K</p> <img id="contador" src="imagens/galera.png" alt="">
             </div>
         </section>
         <section id="home">
@@ -43,13 +35,9 @@
                 <button class="home">Liiitros</button>
                 <button class="home">Reeeceba</button>
             </div>
-                <picture>
-                    <source media="(min-width: 100px)" srcset="imagens/matt/mattLight200px.png">
-                    <source media="(max-width: 900px)" srcset="imagens/matt/mattLight300px.png">
-                    <source media="(min-width: 901px)" srcset="imagens/matt/mattLight400px.png">
-              </picture>
+
             <div class="imagem">
-                
+                <img src="imagens/matt/mattLight200px.png" alt="">
             </div>
         </section>
     </header>
