--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 <body>
     <header>
         <section id="header">
-            <img id="menu" src="imagens/menu.png" alt="Menu">
-            <img src="imagens/Aqua Logo 120px.png" alt="Aqua Logo">
-            <div id="hidratados">
+            <div id="esquerda">
+                <img id="menu" src="imagens/menu.png" alt="Menu">
+            </div>
+            <div id="central">
+                <img src="imagens/Aqua Logo 120px.png" alt="Aqua Logo">
+            </div>
+            <div id="direita">
                 <p class="cont">1.1K</p> <img id="contador" src="imagens/galera.png" alt="">
             </div>
         </section>
