--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
 <body>
     <header>
         <section id="header">
-            <div id="esquerda">
+            <div class="extremidade">
                 <img id="menu" src="imagens/menu.png" alt="Menu">
             </div>
             <div id="central">
                 <img src="imagens/Aqua Logo 120px.png" alt="Aqua Logo">
             </div>
-            <div id="direita">
-                <p class="cont">1.1K</p> <img id="contador" src="imagens/galera.png" alt="">
+            <div class="extremidade" id="divContador">
+                <p class="cont">1.1K</p>
+                <img id="contador" src="imagens/galera.png" alt="pessoas">
             </div>
+
         </section>
         <section id="home">
             <div class="divisor">
