--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <section id="header">
-            <div class="extremidade">
+            <div class="extremidade" id="menu">
                 <span id="menu" class="material-symbols-outlined">
                     menu
                 </span>
@@ -20,10 +20,10 @@
 
             <div id="central">
             </div>
-            
+
             <div class="extremidade" id="divContador">
                 <p class="cont">1.1K</p>
-                <img id="contador" src="imagens/galera.png" alt="pessoas">
+                <img id="contador" src="imagens/galeraVerdeEscuro.png" alt="pessoas">
             </div>
 
         </section>
@@ -41,9 +41,9 @@
                     <span class="pagerItem" id="p03"></span>
                 </div>
                 <div class="botts">
-                    <button class="home" id="b01">Diiicas</button>
-                    <button class="home" id="b02">Liiitros</button>
-                    <button class="home" id="b03">Reeeceba</button>
+                    <button class="home" id="b01">DIIICAS</button>
+                    <button class="home" id="b02">LIIITROS</button>
+                    <button class="home" id="b03">REEECEBA</button>
                 </div>
             </div>
 
