--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <section id="header">
-            <div class="extremidade" id="menu">
+            <div class="extremidade" id="btmenu">
                 <span id="menu" class="material-symbols-outlined">
                     menu
                 </span>
