--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                     menu
                 </span>
             </div>
+            <div id="menu">
+                
+            </div>
 
             <div id="central">
             </div>
