--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
+    <menu id="menu">
+        <ul>
+            <li><a href="#">Dicas</a></li>
+            <li><a href="#">Calcule</a></li>
+            <li><a href="#">Guia Prático</a></li>
+        </ul>
+    </menu>
     <header>
         <section id="header">
             <div class="extremidade" id="btmenu">
                 <span id="menu" class="material-symbols-outlined">
                     menu
                 </span>
-            </div>
-            <div id="menu">
-                
             </div>
 
             <div id="central">
