botão menu e menu
falta o JS

--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
 </head>
 <body>
     <menu id="menu">
+        <h3>Menu</h3>
         <ul>
-            <li><a href="#">Dicas</a></li>
-            <li><a href="#">Calcule</a></li>
-            <li><a href="#">Guia Prático</a></li>
+            <li><a href="#">DICAS</a></li>
+            <li><a href="#">CALCULE</a></li>
+            <li><a href="#">GUIA PRÁTICO</a></li>
         </ul>
     </menu>
     <header>
         <section id="header">
-            <div class="extremidade" id="btmenu">
+            <button class="extremidade" id="btmenu" onclick="abrirmenu">
                 <span id="menu" class="material-symbols-outlined">
                     menu
                 </span>
-            </div>
+            </button>
 
             <div id="central">
             </div>
@@ -65,6 +66,6 @@
 
     </footer>
 
-    
+    <script src="menu.js"></script>
 </body>
 </html>
