--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body>
     <menu id="menu">
         <h3>Menu</h3>
+        <span class="material-symbols-outlined">
+            close
+        </span>
         <ul>
             <li><a href="#">DICAS</a></li>
             <li><a href="#">CALCULE</a></li>
@@ -31,7 +34,10 @@
 
             <div class="extremidade" id="divContador">
                 <p class="cont">1.1K</p>
-                <img id="contador" src="imagens/galeraVerdeEscuro.png" alt="pessoas">
+                <!-- <img id="contador" src="imagens/galeraVerdeEscuro.png" alt="pessoas"> -->
+                <span class="material-symbols-outlined">
+                    group
+                </span>
             </div>
 
         </section>
