--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 
         </section>
         <section id="home">
-            <div class="infos" onload="abriu()">
+            <!-- <div class="infos" >
                 <h1>BEBA + ÁGUA</h1>
                 <div id="slide-container">
-                    <p class="ativo" id="t01">Mantenha-se hidratado: Dicas simples e eficazes para beber mais água todos os dias</p>
-                    <p class="direita" id="t02">Descubra a quantidade ideal de água para o seu corpo</p>
+                    <p class="primeiro" id="t01">Mantenha-se hidratado: Dicas simples e eficazes para beber mais água todos os dias</p>
+                    <p id="t02">Descubra a quantidade ideal de água para o seu corpo</p>
                     <p id="t03">Receba um guia prático de como atingir sua meta diária de hidratação</p>
                 </div>
                 <div class="pager">
@@ -60,6 +60,27 @@
                     <button class="home" id="b01">DIIICAS</button>
                     <button class="home" id="b02">LIIITROS</button>
                     <button class="home" id="b03">REEECEBA</button>
+                </div>
+            </div> -->
+
+            <div class="infos" >
+                <h1>BEBA + ÁGUA</h1>
+                <div class="sliders">
+                    <div class="slide" id="s01">
+                        <p  id="t01">Mantenha-se hidratado: Dicas simples e eficazes para beber mais água todos os dias</p>
+                        <!-- <span class="pagerItem" id="p01"></span> -->
+                        <button class="home" id="b01">DIIICAS</button>
+                    </div>
+                    <div class="slide" id="s02">
+                        <p id="t02">Descubra a quantidade ideal de água para o seu corpo</p>
+                        <!-- <span class="pagerItem" id="p02"></span> -->
+                        <button class="home" id="b02">LIIITROS</button>
+                    </div>
+                    <div class="slide" id="s03">
+                        <p id="t03">Receba um guia prático de como atingir sua meta diária de hidratação</p>
+                        <!-- <span class="pagerItem" id="p03"></span> -->
+                        <button class="home" id="b03">REEECEBA</button>
+                    </div>
                 </div>
             </div>
 
