--- a/index.html
+++ b/index.html
@@ -62,25 +62,23 @@
                     <button class="home" id="b03">REEECEBA</button>
                 </div>
             </div> -->
-
-            <div class="infos" >
+           
+            <div class="infos">
                 <h1>BEBA + ÁGUA</h1>
-                <div class="sliders">
-                    <div class="slide" id="s01">
-                        <p  id="t01">Mantenha-se hidratado: Dicas simples e eficazes para beber mais água todos os dias</p>
-                        <!-- <span class="pagerItem" id="p01"></span> -->
-                        <button class="home" id="b01">DIIICAS</button>
-                    </div>
-                    <div class="slide" id="s02">
-                        <p id="t02">Descubra a quantidade ideal de água para o seu corpo</p>
-                        <!-- <span class="pagerItem" id="p02"></span> -->
-                        <button class="home" id="b02">LIIITROS</button>
-                    </div>
-                    <div class="slide" id="s03">
-                        <p id="t03">Receba um guia prático de como atingir sua meta diária de hidratação</p>
-                        <!-- <span class="pagerItem" id="p03"></span> -->
-                        <button class="home" id="b03">REEECEBA</button>
-                    </div>
+                <div class="slides" id="s01">
+                    <p  id="t01">Mantenha-se hidratado: Dicas simples e eficazes para beber mais água todos os dias! 💧</p>
+                    <!-- <span class="pagerItem" id="p01"></span> -->
+                    <button class="home" id="b01">DIIICAS</button>
+                </div>
+                <div class="slides" id="s02">
+                    <p id="t02">Descubra a hidratação ideal para o seu corpo diariamente e sinta os benefícios! 💦</p>
+                    <!-- <span class="pagerItem" id="p02"></span> -->
+                    <button class="home" id="b02">LIIITROS</button>
+                </div>
+                <div class="slides" id="s03">
+                    <p id="t03">Receba um guia prático de como atingir sua meta diária de hidratação! 🌊</p>
+                    <!-- <span class="pagerItem" id="p03"></span> -->
+                    <button class="home" id="b03">REEECEBA</button>
                 </div>
             </div>
 
