--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
                 </div>
             </div>
 
-            <div class="imagem">
-            </div>
+            <div class="imagem"></div>
         </section>
     </header>
     <main>
