simplificação do código

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Aqua | Be Better</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="shortcut icon" href="imagens/favicon-32x32.png" type="image/x-icon">
-    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/style01.css">
 </head>
 <body>
     <header>
@@ -64,22 +64,22 @@
             </div> -->
            
             <div class="infos">
-                <h1>BEBA + ÁGUA</h1>
-                <div class="slides" id="s01">
-                    <p  id="t01">Mantenha-se hidratado: Dicas simples e eficazes para beber mais água todos os dias! 💧</p>
+                <h1>BEBA + ÁGUA</h1>                
+                <div class="slides active" id="s01">
+                    <p  id="t01">Mantenha-se hidratado: <strong>Dicas simples</strong> e eficazes para beber mais água todos os dias! 💧</p>
                     <!-- <span class="pagerItem" id="p01"></span> -->
                     <button class="home" id="b01">DIIICAS</button>
                 </div>
-                <div class="slides" id="s02">
+                <!-- <div class="slides" id="s02">
                     <p id="t02">Descubra a hidratação ideal para o seu corpo diariamente e sinta os benefícios! 💦</p>
-                    <!-- <span class="pagerItem" id="p02"></span> -->
+                    <span class="pagerItem" id="p02"></span>
                     <button class="home" id="b02">LIIITROS</button>
                 </div>
                 <div class="slides" id="s03">
                     <p id="t03">Receba um guia prático de como atingir sua meta diária de hidratação! 🌊</p>
-                    <!-- <span class="pagerItem" id="p03"></span> -->
+                    <span class="pagerItem" id="p03"></span>
                     <button class="home" id="b03">REEECEBA</button>
-                </div>
+                </div> -->
             </div>
 
             <div class="imagem"></div>
@@ -93,6 +93,5 @@
     </footer>
 
     <script src="menu.js"></script>
-    <script src="slide.js"></script>
 </body>
 </html>
