--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Aqua | Be Better</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="shortcut icon" href="imagens/favicon-32x32.png" type="image/x-icon">
-    <link rel="stylesheet" href="estilos/style01.css">
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
