--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
 
         </section>
-        <section id="home">
+        <section class="inicio" id="home">
             <!-- <div class="infos" >
                 <h1>BEBA + ÁGUA</h1>
                 <div id="slide-container">
@@ -65,28 +65,54 @@
            
             <div class="infos">
                 <h1>BEBA + ÁGUA</h1>                
-                <div class="slides active" id="s01">
-                    <p  id="t01">Mantenha-se hidratado: <strong>Dicas simples</strong> e eficazes para beber mais água todos os dias! 💧</p>
-                    <!-- <span class="pagerItem" id="p01"></span> -->
-                    <button class="home" id="b01">DIIICAS</button>
-                </div>
-                <!-- <div class="slides" id="s02">
-                    <p id="t02">Descubra a hidratação ideal para o seu corpo diariamente e sinta os benefícios! 💦</p>
-                    <span class="pagerItem" id="p02"></span>
-                    <button class="home" id="b02">LIIITROS</button>
-                </div>
-                <div class="slides" id="s03">
-                    <p id="t03">Receba um guia prático de como atingir sua meta diária de hidratação! 🌊</p>
-                    <span class="pagerItem" id="p03"></span>
-                    <button class="home" id="b03">REEECEBA</button>
-                </div> -->
+                <p class="txt" id="t01">Mantenha-se hidratado: <strong>Dicas simples</strong> e eficazes para beber mais água todos os dias! 💧</p>
+                <button class="home" id="b01">DIIICAS</button>
             </div>
 
             <div class="imagem"></div>
         </section>
     </header>
     <main>
+        <section class="aba" id="matt">
+            <div id="imgmatt"></div>
 
+            <div class="infos" id="mattoi">
+                <h2>Oieee!</h2>
+                <p class="txt" id="oi">Me chamo Matt e vamos entender como você pode tomar 2x mais água e ficar super hidratado!</p>
+                <button class="home" id="b02">ALCANÇANDO O MÍNIMO</button>
+            </div>
+        </section>
+
+        <section class="aba2" id="dicas">
+            <div id="introSup">
+                <div class="infos" id="introDicas">
+                    <h2>Como beber + água?</h2>
+                    <p>Veja alguns pontos para beber mais água diariamente!</p>
+                </div>
+                
+                <div id="imgSq"></div>
+            </div>
+            <div id="area-deslizante">
+                <div class="conteudo01">
+                    <div id="imgGelo"></div>
+                    <h3 class="menor">Sem água</h3>
+                    <H3>GELADA</H3>
+                    <p>Traz saciedade, mas não te hidrata. 😟</p>
+                </div>
+                <div id="conteudo02">
+                    <div id="imgTimer"></div>
+                    <h3 class="menor">Ative os</h3>
+                    <h3>LEMBRETES</h3>
+                    <p>Use o App para se <strong>lembrar</strong> de hidratar-se! ⏲️</p>
+                </div>
+                <div id="conteudo03">
+                    <div id="imgSqueezes"></div>
+                    <h3 class="menor">Glup, Glup</h3>
+                    <h3>FLUXO</h3>
+                    <p>A "frequência" do Glup te ajudará ou atrapalhará! 😅</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
