--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
             <div class="infos" id="mattoi">
                 <h2>Oieee!</h2>
                 <p class="txt" id="oi">Me chamo Matt e vamos entender como você pode tomar 2x mais água e ficar super hidratado!</p>
-                <button class="home" id="b02">ALCANÇANDO O MÍNIMO</button>
+                <button class="home" id="b02">CALCULE O MÍNIMO</button>
             </div>
         </section>
 
         <section class="aba2" id="dicas">
-            <div id="introSup">
-                <div class="infos" id="introDicas">
-                    <h2>Como beber + água?</h2>
+            <div class="infos" id="introDicas">
+                <h2>Como beber + água?</h2>
+                <div id="introSup">
                     <p>Veja alguns pontos para beber mais água diariamente!</p>
-                </div>
-                
-                <div id="imgSq"></div>
+                    <div id="imgSq"></div>
+                </div>                
             </div>
+                
             <div id="area-deslizante">
                 <div class="conteudo01">
                     <div id="imgGelo"></div>
