--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <section class="aba2" id="dicas">
             <div class="infos" id="introDicas">
-                <h2>Como beber + água?</h2>
+                <h2>Como beber <br>+ água?</h2>
                 <div id="introSup">
                     <p>Veja alguns pontos para beber mais água diariamente!</p>
                     <div id="imgSq"></div>
