--- a/index.html
+++ b/index.html
@@ -91,28 +91,34 @@
                     <div id="imgSq"></div>
                 </div>                
             </div>
-                
+
             <div id="area-deslizante">
 
-                <div class="conteudo01">
+                <div class="conteudoDicas" id="conteudo01">
                     <div id="imgGelo"></div>
-                    <h3 class="menor">Sem água</h3>
-                    <H3>GELADA</H3>
-                    <p>Traz saciedade, mas não te hidrata. 😟</p>
+                    <div class="details">
+                        <h3 class="menor">Sem água</h3>
+                        <H3>GELADA</H3>
+                        <p>Traz saciedade, mas não te hidrata. 😟</p>
+                    </div>
                 </div>
 
-                <div id="conteudo02">
+                <div class="conteudoDicas" id="conteudo02">
                     <div id="imgTimer"></div>
-                    <h3 class="menor">Ative os</h3>
-                    <h3>LEMBRETES</h3>
-                    <p>Use o App para se <strong>lembrar</strong> de hidratar-se! ⏲️</p>
+                    <div class="details">
+                        <h3 class="menor">Ative os</h3>
+                        <h3>LEMBRETES</h3>
+                        <p>Use o App para se <strong>lembrar</strong> de hidratar-se! ⏲️</p>
+                    </div>
                 </div>
 
-                <div id="conteudo03">
+                <div class="conteudoDicas" id="conteudo03">
                     <div id="imgSqueezes"></div>
-                    <h3 class="menor">Glup, Glup</h3>
-                    <h3>FLUXO</h3>
-                    <p>A "frequência" do Glup te ajudará ou atrapalhará! 😅</p>
+                    <div class="details">
+                        <h3 class="menor">Glup, Glup</h3>
+                        <h3>FLUXO</h3>
+                        <p>A "frequência" do Glup te ajudará ou atrapalhará! 😅</p>
+                    </div>
                 </div>
 
             </div>
